--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -14,10 +14,19 @@
         android:id="@+id/secondFragment"
         android:name="com.example.demexamentesthome.SecondFragment"
         android:label="fragment_second"
-        tools:layout="@layout/fragment_second" />
+        tools:layout="@layout/fragment_second" >
+        <action
+            android:id="@+id/action_secondFragment_to_clickFragment"
+            app:destination="@id/clickFragment" />
+    </fragment>
     <fragment
         android:id="@+id/threeFragment"
         android:name="com.example.demexamentesthome.ThreeFragment"
         android:label="fragment_three"
         tools:layout="@layout/fragment_three" />
+    <fragment
+        android:id="@+id/clickFragment"
+        android:name="com.example.demexamentesthome.ClickFragment"
+        android:label="fragment_click"
+        tools:layout="@layout/fragment_click" />
 </navigation>
